Fix overflow elements

--- a/resources/sass/_imports/classes/_layout.sass
+++ b/resources/sass/_imports/classes/_layout.sass
@@ -22,6 +22,8 @@
     @media (min-width: 1200px)
         max-width: 1000px
 
+.page
+    overflow: hidden
 .page, .page-content
     position: relative
     background-color: $tc-white
