--- a/resources/sass/_imports/pages/_home.sass
+++ b/resources/sass/_imports/pages/_home.sass
@@ -1,8 +1,4 @@
 
-.home
-    .sections
-        position: relative
-        overflow: hidden
 
 .services
     .service-box
